4.1.2-dd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: job412dd-svc
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8088
  selector:
    app: job412dd
