4.1.2-dd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: job412dd-ing
  annotations:
    ingress.kubernetes.io/proxy-body-size: 100M
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/app-root: /
spec:
  rules:
  - host: job412dd-issuegen.isd-qa.opsmx.net
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: job412dd-svc
            port:
              number: 80
